--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "coding-challenge",
   "version": "1.0.0",
-  "description": "coding challenge for front end applicants",
+  "description": "",
   "main": "",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -19,6 +19,8 @@
     "gulp-uglify": "^2.0.0",
     "gulp-useref": "^3.1.2",
     "gulp-watch": "^4.3.10",
+    "jquery": "^3.1.1",
+    "request": "^2.79.0",
     "run-sequence": "^1.2.2",
     "xtend": "^4.0.1"
   },
@@ -31,6 +33,5 @@
     "gulp-watch": "^4.3.10",
     "mongodb": "^2.2.12",
     "nodemon": "^1.11.0"
-  },
-  "description": ""
+  }
 }
